swagge definition for puzzle thingy
